#022: fixed spacing of cart

--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ li{
 
 #cartQty {
     top: 2px;
-    left: -42px;
+    left: -10px;
     width: 23px;
     height: 23px;
     padding-left: 8.5px;
